2004-07-16  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-result.c (gnome_vfs_result_from_errno_code):
	Added ECONNREFUSED and ENETUNREACH error codes.

2004-07-16  Christian Kellner  <gicmo@gnome-de.org>

	* modules/Makefile.am
	* configure.in: cleanups and ability to switch between
	neon and the old module.
		
2004-07-16  William Jon McCann  <mccann@jhu.edu>

	* modules/sftp-method.c (sftp_connect):
	Initialize strings to prevent crash.  Fixes #147194.
				
2004-07-16  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-resolve.h: 
	* libgnomevfs/gnome-vfs-resolve.c
	(gnome_vfs_resolve_reset_to_beginning): Implemented.
	

	* configure.in:
	* acinclude.m4:
	Moved some checks from neon into configure.in and removed
	duplicated ones. 

	* imported/neon/ne_gnomevfs.c: 
	* imported/neon/ne_gnomevfs.h:
	* imported/neon/Makefile.am:
	Use the gnome-vfs io layer (inc. ssl stuff) in neon.

	* imported/neon/ne_utils.h:
	Use g_snprintf for ne_snprintf.
	
	* libgnomevfs/gnome-vfs-address.c (gnome_vfs_address_to_string):
	Fixed typos.
		
2004-07-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* modules/smb-method.c:
	Don't create ~/.smb/smb.conf, remove
	old zero-byte versions.
	Use kerberos if availible.

	* programs/gnomevfs-ls.c: (main):
	Call setlocale.
	
2004-07-16  Christian Kellner  <gicmo@gnome-de.org>
	
	* libgnomevfs/gnome-vfs-socket.c (gnome_vfs_socket_free):
	Implemented new function for freeing the socket object.

	* libgnomevfs/gnome-vfs-inet-connection.c
	(gnome_vfs_inet_connection_create_from_address):
	(gnome_vfs_inet_connection_free)
	Implemented.
	(gnome_vfs_inet_connection_destroy):
	Use gnome_vfs_inet_connection_free.

2004-07-15  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-result.h: 
	* libgnomevfs/gnome-vfs-result.c
	Added the GNOME_VFS_ERROR_NAMESERVER result.
	(gnome_vfs_result_from_h_errno_val): 
	(gnome_vfs_result_from_h_errno):
	Moved gnome_vfs_error_from_h_errno code body to